upgrade to the code using hyper-parameter tunning

--- a/plant diesease.ipynb
+++ b/plant diesease.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "private_outputs": true,
-      "include_colab_link": true
+      "private_outputs": true
     },
     "kernelspec": {
       "name": "python3",
@@ -19,16 +18,6 @@
     "gpuClass": "standard"
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/NKASG/Potato-Leaf-diesease-classifier/blob/main/plant%20diesease.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "execution_count": null,
@@ -319,30 +308,21 @@
         "resize_and_rescale ,\n",
         "data_augmentation,\n",
         "    \n",
-        "     keras.layers.Conv2D(filters=96, kernel_size=(3,3), strides=(4,4), activation='relu', input_shape=input_shape),\n",
-        "    keras.layers.BatchNormalization(),\n",
-        "    keras.layers.MaxPool2D(pool_size=(2,2), strides=(2,2)),\n",
-        "\n",
-        "    keras.layers.Conv2D(filters=256, kernel_size=(5,5), strides=(1,1), activation='relu', padding=\"same\"),\n",
-        "    keras.layers.BatchNormalization(),\n",
-        "    keras.layers.MaxPool2D(pool_size=(2,2), strides=(2,2)),\n",
-        "\n",
-        "    keras.layers.Conv2D(filters=384, kernel_size=(3,3), strides=(1,1), activation='relu', padding=\"same\"),\n",
-        "    keras.layers.BatchNormalization(),\n",
-        "\n",
-        "    keras.layers.Conv2D(filters=384, kernel_size=(3,3), strides=(1,1), activation='relu', padding=\"same\"),\n",
-        "    keras.layers.BatchNormalization(),\n",
-        "\n",
-        "    keras.layers.Conv2D(filters=256, kernel_size=(3,3), strides=(1,1), activation='relu', padding=\"same\"),\n",
-        "    keras.layers.BatchNormalization(),\n",
-        "    keras.layers.MaxPool2D(pool_size=(2,2), strides=(2,2)),\n",
-        "\n",
-        "    keras.layers.Flatten(),\n",
-        "    keras.layers.Dense(4096, activation='relu'),\n",
-        "    keras.layers.Dropout(0.5),\n",
-        "    keras.layers.Dense(4096, activation='relu'),\n",
-        "    keras.layers.Dropout(0.5),\n",
-        "    keras.layers.Dense(3, activation='softmax'),\n",
+        "    layers.Conv2D(32, kernel_size = (3,3), activation='relu', input_shape=input_shape),\n",
+        "    layers.MaxPooling2D((2, 2)),\n",
+        "    layers.Conv2D(64,  kernel_size = (3,3), activation='relu'),\n",
+        "    layers.MaxPooling2D((2, 2)),\n",
+        "    layers.Conv2D(64,  kernel_size = (3,3), activation='relu'),\n",
+        "    layers.MaxPooling2D((2, 2)),\n",
+        "    layers.Conv2D(64, (3, 3), activation='relu'),\n",
+        "    layers.MaxPooling2D((2, 2)),\n",
+        "    layers.Conv2D(64, (3, 3), activation='relu'),\n",
+        "    layers.MaxPooling2D((2, 2)),\n",
+        "    layers.Conv2D(64, (3, 3), activation='relu'),\n",
+        "    layers.MaxPooling2D((2, 2)),\n",
+        "    layers.Flatten(),\n",
+        "    layers.Dense(64, activation='relu'),\n",
+        "    layers.Dense(3, activation='softmax'),\n",
         "   \n",
         "    \n",
         "])\n",
