a new comitt to my project repo

--- a/plant diesease.ipynb
+++ b/plant diesease.ipynb
@@ -4,8 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "collapsed_sections": [],
-      "private_outputs": true
+      "private_outputs": true,
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -18,6 +18,16 @@
     "gpuClass": "standard"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/NKASG/Potato-Leaf-diesease-classifier/blob/main/plant%20diesease.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "execution_count": null,
@@ -42,7 +52,7 @@
         "drive.mount('/content/drive')"
       ],
       "metadata": {
-        "id": "0ZymK964ElHi"
+        "id": "UMnzyJH_-l8h"
       },
       "execution_count": null,
       "outputs": []
@@ -293,6 +303,19 @@
     {
       "cell_type": "code",
       "source": [
+        "train_ds = train_ds.map(\n",
+        "    lambda x, y: (data_augmentation(x, training=True), y)\n",
+        ").prefetch(buffer_size=tf.data.AUTOTUNE)"
+      ],
+      "metadata": {
+        "id": "Ui46ZBQ1EIfH"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "input_shape = (32,256,256,3)"
       ],
       "metadata": {
@@ -306,7 +329,6 @@
       "source": [
         "    Model = keras.models.Sequential([\n",
         "resize_and_rescale ,\n",
-        "data_augmentation,\n",
         "    \n",
         "    layers.Conv2D(32, kernel_size = (3,3), activation='relu', input_shape=input_shape),\n",
         "    layers.MaxPooling2D((2, 2)),\n",
@@ -323,6 +345,8 @@
         "    layers.Flatten(),\n",
         "    layers.Dense(64, activation='relu'),\n",
         "    layers.Dense(3, activation='softmax'),\n",
+        "\n",
+        "  \n",
         "   \n",
         "    \n",
         "])\n",
@@ -375,7 +399,7 @@
     {
       "cell_type": "code",
       "source": [
-        "history = Model.fit( train_ds, batch_size=32, validation_data=val_ds, verbose=1, epochs=10)"
+        "history = Model.fit( train_ds, batch_size=32, validation_data=val_ds, verbose=1, epochs=5)"
       ],
       "metadata": {
         "id": "pNCs4d6BDRuI"
