Updated code that works with gradio deployment

--- a/plant diesease.ipynb
+++ b/plant diesease.ipynb
@@ -329,7 +329,7 @@
       "source": [
         "    Model = keras.models.Sequential([\n",
         "resize_and_rescale ,\n",
-        "    \n",
+        "\n",
         "    layers.Conv2D(32, kernel_size = (3,3), activation='relu', input_shape=input_shape),\n",
         "    layers.MaxPooling2D((2, 2)),\n",
         "    layers.Conv2D(64,  kernel_size = (3,3), activation='relu'),\n",
@@ -346,12 +346,12 @@
         "    layers.Dense(64, activation='relu'),\n",
         "    layers.Dense(3, activation='softmax'),\n",
         "\n",
-        "  \n",
-        "   \n",
-        "    \n",
+        "\n",
+        "\n",
+        "\n",
         "])\n",
-        "     \n",
-        "   "
+        "\n",
+        ""
       ],
       "metadata": {
         "id": "LQM-9EFr19A5"
@@ -466,7 +466,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "model prediction "
+        "model prediction"
       ],
       "metadata": {
         "id": "Si1KHouVwfkt"
@@ -477,14 +477,14 @@
       "source": [
         "import numpy as np\n",
         "for images_batch, labels_batch in test_ds.take(1):\n",
-        "    \n",
+        "\n",
         "    first_image = images_batch[0].numpy().astype('uint8')\n",
         "    first_label = labels_batch[0].numpy()\n",
-        "    \n",
+        "\n",
         "    print(\"first image to predict\")\n",
         "    plt.imshow(first_image)\n",
         "    print(\"actual label:\",class_names[first_label])\n",
-        "    \n",
+        "\n",
         "    batch_prediction = Model.predict(images_batch)\n",
         "    print(\"predicted label:\",class_names[np.argmax(batch_prediction[0])])"
       ],
@@ -521,12 +521,12 @@
         "    for i in range(9):\n",
         "        ax = plt.subplot(3, 3, i + 1)\n",
         "        plt.imshow(images[i].numpy().astype(\"uint8\"))\n",
-        "        \n",
+        "\n",
         "        predicted_class, confidence = predict(Model, images[i].numpy())\n",
-        "        actual_class = class_names[labels[i]] \n",
-        "        \n",
+        "        actual_class = class_names[labels[i]]\n",
+        "\n",
         "        plt.title(f\"Actual: {actual_class},\\n Predicted: {predicted_class}.\\n Confidence: {confidence}%\")\n",
-        "        \n",
+        "\n",
         "        plt.axis(\"off\")"
       ],
       "metadata": {
@@ -547,10 +547,12 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install gradio\n"
+        "!pip install gradio\n",
+        "# !pip install open_cv"
       ],
       "metadata": {
-        "id": "WdkqWKmGkzQZ"
+        "id": "WdkqWKmGkzQZ",
+        "collapsed": true
       },
       "execution_count": null,
       "outputs": []
@@ -569,9 +571,32 @@
     {
       "cell_type": "code",
       "source": [
+        "!apt-get -qq install -y libsm6 libxext6 && pip install -q -U opencv-python"
+      ],
+      "metadata": {
+        "id": "TvxsJtoglkFn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import cv2"
+      ],
+      "metadata": {
+        "id": "ibJoZpqEl8BD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "def predict_image(img):\n",
+        "  img = cv2.resize(img,(256,256))\n",
         "  img_4d=img.reshape(-1,256,256,3)\n",
-        "  prediction=Model.predict(img_4d)[0]\n",
+        "  prediction=Model.predict(img_4d).flatten()\n",
         "  return {class_names[i]: float(prediction[i]) for i in range(3)}"
       ],
       "metadata": {
@@ -583,13 +608,27 @@
     {
       "cell_type": "code",
       "source": [
-        "image = gr.inputs.Image(shape=(256,256))\n",
-        "label = gr.outputs.Label(num_top_classes=3)\n",
-        "\n",
-        "gr.Interface(fn=predict_image, inputs=image, outputs=label,interpretation='default').launch()"
+        "with gr.Blocks() as demo:\n",
+        "    signal = gr.Markdown(''' Welcome to Maize Classifier,This model can identify if a leaf is\n",
+        "        **HEALTHY**, has **COMMON RUST**, **BLIGHT** or **GRAY LEAF SPOT**''')\n",
+        "    with gr.Row():\n",
+        "        inp = gr.Image()\n",
+        "        out = gr.Label()\n",
+        "        inp.upload(fn= predict_image, inputs = inp, outputs = out)"
       ],
       "metadata": {
-        "id": "LjM_UC4_o9ZF"
+        "id": "AhsgQ1u0jd4l"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "demo.launch()"
+      ],
+      "metadata": {
+        "id": "xeotnNTOj7zY"
       },
       "execution_count": null,
       "outputs": []
